# golfball

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.rst  Makefile  README.rst  pyproject.toml
data/: write_cd_h5.py
data/dimpledSpheresDragData/: GolfBall.csv  eD0_smooth.csv  eD1p25e-2.csv  eD1p5e-3.csv  eD5e-3.csv
docs/: Makefile  conf.py  developers.rst  golfball.rst  index.html  index.rst  license.rst  modules.rst  quickstart.rst
docs/_build/html/: .buildinfo  authors.html  changelog.html  contributing.html  developers.html  examples.html  genindex.html  golfball.html  index.html  install.html  kudos.html  license.html  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/golfball/: analysis.html  sim.html  stdAtm76.html
docs/_build/html/_sources/: developers.rst.txt  examples.rst.txt  golfball.rst.txt  install.rst.txt
golfball/: __init__.py  __version__.py  analysis.py  cd_table.h5  sim.py  stdAtm76.py
reports/: .gitignore  index.html
tests/sim/: test_runsim.py
tests/sim/inputs/: projectile_inputs_0deg.yml  projectile_inputs_default.yml  projectile_inputs_traj.yml
tests/sim/outputs/: projectile_outputs_0deg.yml  projectile_outputs_default.yml  projectile_trajectory.h5
tests/stdAtm76/: pressures.pkl  test_stdatm.py
